@@ -19,6 +19,7 @@ Changes:
 - Add more detailed vfs_fruit settings for AFP.
 - Add UEFI option to zroot.
 - Add CAM Target Layer (EXPERIMENTAL).
+- Add IPv6 privacy extensions option.
 - Upgrade lcdproc to 0.5.9.
 - Upgrade proftpd to 1.3.6.
 - Upgrade rrdtool to 1.7.0.
